server/compilers/goLiteJS/src/test/ml2/invalid/vardecl1.go
package main 
//undeclared type in variable declaration


var a as; 
